--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,11 @@ ENV/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+.idea/
+
+*.whl
+*.sqlite3
+
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
